# Sanare

./: .env.example  .env.nvidia.example  .gitignore  Dockerfile  README.md  docker-compose.nvidia.yml  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements-core.txt  requirements-render.txt  requirements.txt
.github/workflows/: ci.yml
docs/: CONNECT_AGENT.md  NVIDIA_DEPLOYMENT.md
examples/: analyze_request.json  analyze_response.json  clinical_eval_cases.json  eval_cases.json  evaluate_request.json  fhir_response.json  mtsamples_eval.json
iasis/: __init__.py  agent.py  deidentify.py  evaluation.py  fhir.py  llm_client.py  pipeline.py  retrieval.py  risk.py  schemas.py  storage.py  temporal_app.py  terminology.py  tracing.py
sanare/: __init__.py  agent.py  deidentify.py  evaluation.py  fhir.py  llm_client.py  mcp_app.py  ner.py  nvidia.py  pipeline.py  retrieval.py  risk.py  schemas.py  security.py  sharp.py  storage.py  temporal_app.py  terminology.py  tracing.py
scripts/: finalize_mtsamples_eval.py  process_mtsamples.py  run_eval.py  sanare_mcp_server.py  spawn_mcp.py  start_mcp.ps1  temporal_worker.py  update_eval_expected.py
skills/sanare-clinical-extraction/: SKILL.md
static/: index.html
tests/: conftest.py  test_analyze.py  test_eval_dataset.py
